--- a/android/PinkOctopusProject/app/src/main/res/values/styles.xml
+++ b/android/PinkOctopusProject/app/src/main/res/values/styles.xml
@@ -1,7 +1,12 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <!-- General -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColorPrimary">@color/text_toolbar_primary</item>
+        <item name="android:textColor">@color/text_toolbar_secondary</item>
     </style>
 
 </resources>
