--- a/android/PinkOctopusProject/app/src/main/res/menu/menu_library.xml
+++ b/android/PinkOctopusProject/app/src/main/res/menu/menu_library.xml
@@ -2,13 +2,13 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_main_settings"
-        android:title="@string/menu_main_settings"
+        android:id="@+id/menu_library_settings"
+        android:title="@string/menu_library_settings"
         app:showAsAction="never"/>
 
     <item
-        android:id="@+id/menu_main_about"
-        android:title="@string/menu_main_about"
+        android:id="@+id/menu_library_about"
+        android:title="@string/menu_library_about"
         app:showAsAction="never"/>
 
 </menu>
