--- a/android/PinkOctopusProject/app/src/main/res/values/dimens.xml
+++ b/android/PinkOctopusProject/app/src/main/res/values/dimens.xml
@@ -1,7 +1,20 @@
 <resources>
 
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!-- Font Sizes -->
+    <dimen name="text_small">8sp</dimen>
+    <dimen name="text_normal">16sp</dimen>
+    <dimen name="text_large">32sp</dimen>
+
+    <!-- Padding Sizes -->
+    <dimen name="padding_small">4dp</dimen>
+    <dimen name="padding_normal">8dp</dimen>
+    <dimen name="padding_large">16dp</dimen>
+
+    <!-- Margin Sizes -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- General -->
+    <dimen name="view_story_preview_size">200dp</dimen>
 
 </resources>
