--- a/android/PinkOctopusProject/app/src/main/res/layout/view_story.xml
+++ b/android/PinkOctopusProject/app/src/main/res/layout/view_story.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/padding_small"
     android:background="@color/background_selectable_item"
     android:clickable="true"
     android:focusable="true"
@@ -35,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:visibility="gone"
+                android:visibility="visible"
                 />
 
         </FrameLayout>
