--- a/android/PinkOctopusProject/app/src/main/res/layout/view_story.xml
+++ b/android/PinkOctopusProject/app/src/main/res/layout/view_story.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
+    style="@style/CardViewStyle"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background_selectable_item"
     android:clickable="true"
     android:focusable="true"
     android:orientation="horizontal"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
