--- a/android/PinkOctopusProject/app/src/main/res/layout/fragment_story_page.xml
+++ b/android/PinkOctopusProject/app/src/main/res/layout/fragment_story_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,6 +13,10 @@
     <TextView
         android:id="@+id/fragment_story_page_caption"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="?attr/actionBarSize"
+        android:background="#22000000"
+        android:gravity="center"
+        android:textColor="@color/text_primary"
+        tools:text="Caption"/>
 
 </FrameLayout>
